changed css to avoid footer overlap

--- a/css/Profile.css
+++ b/css/Profile.css
@@ -1,22 +1,21 @@
 #profile-outer-body {
-	border-style: none;
-	padding-top: 50px;
-	height: 100%;
-    width: 100%;
-    position:absolute;
-	background-image: url('/beach.jpg');
-	background-size: contain;
-	background-size: cover;
-    font: 20px "Trebuchet MS", sans-serif;
-    text-align: center;
-    z-index: 0;
+  border-style: none;
+  padding-top: 50px;
+  height: 1000px;
+  width: 100%;
+  background-image: url("/beach.jpg");
+  background-size: contain;
+  background-size: cover;
+  font: 20px "Trebuchet MS", sans-serif;
+  text-align: center;
+  z-index: 0;
 }
 
 #profile-inner-body {
   width: 700px;
   margin: auto;
   padding-top: 50px;
-    background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.7);
   padding-bottom: 50px;
   position: relative;
   z-index: 1;
@@ -25,14 +24,14 @@
 #profile-h1 {
   font-size: 42px;
   font-weight: bold;
-  opacity: 1.0;
+  opacity: 1;
 }
 
 #profile-p {
   text-align: left;
   font-size: 20px;
   line-height: 150%;
-  opacity: 1.0;
+  opacity: 1;
   padding-bottom: 40px;
 }
 
@@ -41,41 +40,41 @@
   font-size: 20px;
   padding-bottom: 60px;
   line-height: 150%;
-  opacity: 1.0;
+  opacity: 1;
 }
 
 #profile-input {
-	background-color: white;
-	color:black;
+  background-color: white;
+  color: black;
   display: inline-block;
   font-size: 16px;
-  opacity: 1.0;
+  opacity: 1;
 }
 
 #profile-button {
-	background-color: lightblue;
-	color:black;
-	border: none;
+  background-color: lightblue;
+  color: black;
+  border: none;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  opacity: 1.0;
+  opacity: 1;
   transition: color 0.3s ease-in-out;
 }
 
 #profile-button:hover {
   background-color: #ddd;
   color: black;
-  opacity: 1.0;
+  opacity: 1;
 }
 
 #wrap {
-    text-align: center;
+  text-align: center;
 }
 
 #content {
-    display: inline-block;
-    text-align: left;
+  display: inline-block;
+  text-align: left;
 }
